/**
 * æ— äººæœºæ¢ç´¢æ¨¡æ‹Ÿå™¨
 * ç”¨äºåœ¨æ²¡æœ‰çœŸå®æ— äººæœºçš„æƒ…å†µä¸‹æµ‹è¯•æ¢ç´¢å¼•æ“
 */

const mqtt = require('mqtt');
const fs = require('fs');
const path = require('path');
const protoHandler = require('./proto-handler');

class DroneSimulator {
  constructor(scenePcdFile, mqttBroker = 'mqtt://127.0.0.1:1883') {
    this.scenePcdFile = scenePcdFile;
    this.mqttBroker = mqttBroker;
    this.mqttClient = null;

    // æ— äººæœºçŠ¶æ€
    this.position = { x: 0, y: 0, z: 1.0 };  // èµ·ç‚¹
    this.velocity = { x: 0, y: 0, z: 0 };
    this.orientation = { w: 1, x: 0, y: 0, z: 0 };  // å››å…ƒæ•°

    // åœºæ™¯ç‚¹äº‘æ•°æ®
    this.scenePoints = [];

    // æ¨¡æ‹Ÿå‚æ•°
    this.isFlying = false;
    this.targetPosition = null;
    this.speed = 0.5;  // m/s
    this.sensorRange = 10;  // ä¼ æ„Ÿå™¨èŒƒå›´10ç±³
    this.pointCloudDensity = 500;  // æ¯æ¬¡å‘é€500ä¸ªç‚¹

    // å®šæ—¶å™¨
    this.odometryTimer = null;
    this.pointCloudTimer = null;
    this.heartbeatTimer = null;

    // è„±å›°æœºåˆ¶
    this.consecutiveCollisions = 0;  // è¿ç»­ç¢°æ’æ¬¡æ•°
    this.lastPosition = { ...this.position };  // ä¸Šæ¬¡ä½ç½®

    // é«˜åº¦é™åˆ¶ï¼ˆé»˜è®¤å€¼ï¼Œå¯é€šè¿‡MQTTé…ç½®ï¼‰
    this.heightLimits = {
      min: 0.5,   // é»˜è®¤æœ€å°é«˜åº¦0.5ç±³
      max: 2.5    // é»˜è®¤æœ€å¤§é«˜åº¦2.5ç±³
    };

    this.seqId = 0;
  }

  /**
   * åŠ è½½åœºæ™¯ç‚¹äº‘æ–‡ä»¶
   */
  async loadScene() {
    console.log(`ğŸ“‚ åŠ è½½åœºæ™¯æ–‡ä»¶: ${this.scenePcdFile}`);

    if (!fs.existsSync(this.scenePcdFile)) {
      console.warn('âš ï¸ åœºæ™¯æ–‡ä»¶ä¸å­˜åœ¨,ä½¿ç”¨é»˜è®¤åœºæ™¯');
      this.generateDefaultScene();
      return;
    }

    const ext = path.extname(this.scenePcdFile).toLowerCase();

    if (ext === '.pcd') {
      await this.loadPCD();
    } else if (ext === '.txt') {
      await this.loadTXT();
    } else if (ext === '.json') {
      await this.loadJSON();
    } else {
      console.warn('âš ï¸ ä¸æ”¯æŒçš„æ–‡ä»¶æ ¼å¼,ä½¿ç”¨é»˜è®¤åœºæ™¯');
      this.generateDefaultScene();
    }

    console.log(`âœ… åœºæ™¯å·²åŠ è½½: ${this.scenePoints.length} ä¸ªç‚¹`);
  }

  /**
   * åŠ è½½PCDæ ¼å¼ç‚¹äº‘
   */
  async loadPCD() {
    const content = fs.readFileSync(this.scenePcdFile, 'utf-8');
    const lines = content.split('\n');

    let dataStarted = false;
    for (const line of lines) {
      if (line.startsWith('DATA')) {
        dataStarted = true;
        continue;
      }

      if (dataStarted && line.trim()) {
        const parts = line.trim().split(/\s+/);
        if (parts.length >= 3) {
          this.scenePoints.push({
            x: parseFloat(parts[0]),
            y: parseFloat(parts[1]),
            z: parseFloat(parts[2]),
            intensity: parts[3] ? parseFloat(parts[3]) : 100
          });
        }
      }
    }
  }

  /**
   * åŠ è½½TXTæ ¼å¼ç‚¹äº‘ (x y z æˆ– x y z intensity)
   */
  async loadTXT() {
    const content = fs.readFileSync(this.scenePcdFile, 'utf-8');
    const lines = content.split('\n');

    for (const line of lines) {
      if (line.trim() && !line.startsWith('#')) {
        const parts = line.trim().split(/\s+/);
        if (parts.length >= 3) {
          this.scenePoints.push({
            x: parseFloat(parts[0]),
            y: parseFloat(parts[1]),
            z: parseFloat(parts[2]),
            intensity: parts[3] ? parseFloat(parts[3]) : 100
          });
        }
      }
    }
  }

  /**
   * åŠ è½½JSONæ ¼å¼ç‚¹äº‘
   */
  async loadJSON() {
    const content = fs.readFileSync(this.scenePcdFile, 'utf-8');
    const data = JSON.parse(content);

    if (Array.isArray(data)) {
      this.scenePoints = data;
    } else if (data.points) {
      this.scenePoints = data.points;
    }
  }

  /**
   * ç”Ÿæˆé»˜è®¤æµ‹è¯•åœºæ™¯ (ä¸€ä¸ª5mÃ—5mçš„æˆ¿é—´)
   */
  generateDefaultScene() {
    console.log('ğŸ  ç”Ÿæˆé»˜è®¤å®¤å†…åœºæ™¯...');

    const roomSize = 5;  // 5ç±³Ã—5ç±³æˆ¿é—´
    const wallHeight = 3;
    const pointDensity = 0.1;  // æ¯10cmä¸€ä¸ªç‚¹

    // ä¸æ·»åŠ åœ°æ¿ç‚¹äº‘ï¼é¿å…ä¸æ— äººæœºç¢°æ’æ£€æµ‹å†²çª
    // å®é™…LiDARä¸ä¼šæ‰«æåˆ°åœ°æ¿ï¼ˆé™¤éè§’åº¦å‘ä¸‹ï¼‰

    // å››é¢å¢™
    // å‰å¢™ (y = roomSize)
    for (let x = -roomSize; x <= roomSize; x += pointDensity) {
      for (let z = 0; z <= wallHeight; z += pointDensity) {
        if (Math.random() < 0.5) {
          this.scenePoints.push({ x, y: roomSize, z, intensity: 100 });
        }
      }
    }

    // åå¢™ (y = -roomSize)
    for (let x = -roomSize; x <= roomSize; x += pointDensity) {
      for (let z = 0; z <= wallHeight; z += pointDensity) {
        if (Math.random() < 0.5) {
          this.scenePoints.push({ x, y: -roomSize, z, intensity: 100 });
        }
      }
    }

    // å·¦å¢™ (x = -roomSize)
    for (let y = -roomSize; y <= roomSize; y += pointDensity) {
      for (let z = 0; z <= wallHeight; z += pointDensity) {
        if (Math.random() < 0.5) {
          this.scenePoints.push({ x: -roomSize, y, z, intensity: 100 });
        }
      }
    }

    // å³å¢™ (x = roomSize)
    for (let y = -roomSize; y <= roomSize; y += pointDensity) {
      for (let z = 0; z <= wallHeight; z += pointDensity) {
        if (Math.random() < 0.5) {
          this.scenePoints.push({ x: roomSize, y, z, intensity: 100 });
        }
      }
    }

    // æ·»åŠ ä¸€äº›éšœç¢ç‰© (æ¡Œå­ã€æ¤…å­ç­‰)
    this.addObstacle(2, 2, 0, 0.5, 0.5, 0.8);  // æ¡Œå­
    this.addObstacle(-2, -2, 0, 0.4, 0.4, 1.0);  // æ¤…å­

    console.log(`âœ… ç”Ÿæˆäº† ${this.scenePoints.length} ä¸ªç‚¹ï¼ˆæ— åœ°æ¿ç‚¹äº‘ï¼‰`);
  }

  /**
   * æ·»åŠ éšœç¢ç‰©
   */
  addObstacle(cx, cy, cz, width, depth, height) {
    const density = 0.05;
    for (let x = cx - width/2; x <= cx + width/2; x += density) {
      for (let y = cy - depth/2; y <= cy + depth/2; y += density) {
        for (let z = cz; z <= cz + height; z += density) {
          if (Math.random() < 0.3) {
            this.scenePoints.push({ x, y, z, intensity: 150 });
          }
        }
      }
    }
  }

  /**
   * è¿æ¥MQTT
   */
  async connectMQTT() {
    return new Promise((resolve, reject) => {
      console.log(`ğŸ”— è¿æ¥MQTT: ${this.mqttBroker}`);

      this.mqttClient = mqtt.connect(this.mqttBroker, {
        clientId: 'drone_simulator_' + Math.random().toString(16).substr(2, 8),
        clean: true
      });

      this.mqttClient.on('connect', () => {
        console.log('âœ… MQTT å·²è¿æ¥');

        // è®¢é˜…ä»»åŠ¡è¯é¢˜
        this.mqttClient.subscribe('/daf/mission', (err) => {
          if (!err) console.log('âœ… å·²è®¢é˜…: /daf/mission');
        });

        this.mqttClient.subscribe('/daf/mission/execution', (err) => {
          if (!err) console.log('âœ… å·²è®¢é˜…: /daf/mission/execution');
        });

        // è®¢é˜…ä½ç½®è®¾ç½®å‘½ä»¤ï¼ˆç”¨äºåŒæ­¥æ¢ç´¢èµ·ç‚¹ï¼‰
        this.mqttClient.subscribe('/daf/simulator/set_position', (err) => {
          if (!err) console.log('âœ… å·²è®¢é˜…: /daf/simulator/set_position');
        });

        // è®¢é˜…é«˜åº¦é™åˆ¶é…ç½®ï¼ˆç”¨äºåŒæ­¥æ¢ç´¢é«˜åº¦èŒƒå›´ï¼‰
        this.mqttClient.subscribe('/daf/simulator/set_height_limits', (err) => {
          if (!err) console.log('âœ… å·²è®¢é˜…: /daf/simulator/set_height_limits');
        });

        resolve();
      });

      this.mqttClient.on('error', (error) => {
        console.error('âŒ MQTTé”™è¯¯:', error);
        reject(error);
      });

      this.mqttClient.on('message', (topic, message) => {
        console.log(`[SIMULATOR] ğŸ“¬ æ”¶åˆ°åŸå§‹MQTTæ¶ˆæ¯: topic=${topic}, size=${message.length}`);
        this.handleMQTTMessage(topic, message);
      });
    });
  }

  /**
   * å¤„ç†MQTTæ¶ˆæ¯ (æ¥æ”¶ä»»åŠ¡æŒ‡ä»¤)
   */
  handleMQTTMessage(topic, message) {
    try {
      console.log(`ğŸ“¥ æ”¶åˆ°æ¶ˆæ¯ [${topic}]`);

      // ç‰¹æ®Šå¤„ç†ï¼šä½ç½®è®¾ç½®æ¶ˆæ¯ï¼ˆJSONæ ¼å¼ï¼Œä¸æ˜¯Protobufï¼‰
      if (topic === '/daf/simulator/set_position') {
        try {
          const posData = JSON.parse(message.toString());
          if (posData.x !== undefined && posData.y !== undefined && posData.z !== undefined) {
            this.position = { x: posData.x, y: posData.y, z: posData.z };
            this.velocity = { x: 0, y: 0, z: 0 };
            this.isFlying = false;
            this.targetPosition = null;
            console.log(`ğŸ“ æ¨¡æ‹Ÿå™¨ä½ç½®å·²æ›´æ–°: (${posData.x.toFixed(2)}, ${posData.y.toFixed(2)}, ${posData.z.toFixed(2)})`);
          } else {
            console.log('âš ï¸ ä½ç½®æ•°æ®æ ¼å¼é”™è¯¯:', posData);
          }
        } catch (err) {
          console.error('è§£æä½ç½®æ•°æ®å¤±è´¥:', err);
        }
        return;  // å¤„ç†å®Œæˆï¼Œç›´æ¥è¿”å›
      }

      // ç‰¹æ®Šå¤„ç†ï¼šé«˜åº¦é™åˆ¶é…ç½®æ¶ˆæ¯ï¼ˆJSONæ ¼å¼ï¼Œä¸æ˜¯Protobufï¼‰
      if (topic === '/daf/simulator/set_height_limits') {
        try {
          const limitsData = JSON.parse(message.toString());
          if (limitsData.minHeight !== undefined && limitsData.maxHeight !== undefined) {
            this.heightLimits.min = limitsData.minHeight;
            this.heightLimits.max = limitsData.maxHeight;
            console.log(`ğŸ“ é«˜åº¦é™åˆ¶å·²æ›´æ–°: [${this.heightLimits.min.toFixed(2)}m, ${this.heightLimits.max.toFixed(2)}m]`);
          } else {
            console.log('âš ï¸ é«˜åº¦é™åˆ¶æ•°æ®æ ¼å¼é”™è¯¯:', limitsData);
          }
        } catch (err) {
          console.error('è§£æé«˜åº¦é™åˆ¶æ•°æ®å¤±è´¥:', err);
        }
        return;  // å¤„ç†å®Œæˆï¼Œç›´æ¥è¿”å›
      }

      // ä½¿ç”¨ Protobuf è§£ç æ¶ˆæ¯
      const decodedMessage = protoHandler.decode(topic, message);

      if (!decodedMessage) {
        console.log('âš ï¸ æ— æ³•è§£ç æ¶ˆæ¯');
        return;
      }

      console.log('ğŸ“¦ è§£ç åçš„æ¶ˆæ¯:', JSON.stringify(decodedMessage, null, 2));

      if (topic === '/daf/mission') {
        // æ”¶åˆ°ä»»åŠ¡ï¼Œè§£æç›®æ ‡ä½ç½®
        const mission = decodedMessage;

        // æŸ¥æ‰¾ç¬¬ä¸€ä¸ª autoPilot ä»»åŠ¡ï¼ˆè·³è¿‡ takeOff, land ç­‰ï¼‰
        if (mission && mission.tasks && mission.tasks.length > 0) {
          const autoPilotTask = mission.tasks.find(task => task.autoPilot);

          if (autoPilotTask && autoPilotTask.autoPilot.position) {
            const goal = autoPilotTask.autoPilot.position;
            this.targetPosition = {
              x: goal.x,
              y: goal.y,
              z: goal.z || this.position.z
            };
            console.log(`ğŸ¯ æ¥æ”¶åˆ°ä»»åŠ¡ç›®æ ‡: (${goal.x.toFixed(2)}, ${goal.y.toFixed(2)}, ${goal.z?.toFixed(2) || this.position.z.toFixed(2)})`);
          } else {
            console.log('âš ï¸ ä»»åŠ¡ä¸­æ²¡æœ‰æ‰¾åˆ° autoPilot æŒ‡ä»¤');
          }
        } else {
          console.log('âš ï¸ ä»»åŠ¡ç»“æ„é”™è¯¯: mission =', mission);
        }
      } else if (topic === '/daf/mission/execution') {
        // æ”¶åˆ°æ‰§è¡ŒæŒ‡ä»¤ï¼Œå¼€å§‹é£è¡Œ
        const execution = decodedMessage;
        // action æ˜¯å­—ç¬¦ä¸² "START"ï¼Œä¸æ˜¯æ•°å­— 0
        if (execution && (execution.action === 0 || execution.action === 'START')) {
          this.isFlying = true;
          console.log('ğŸš å¼€å§‹æ‰§è¡Œä»»åŠ¡');
        } else {
          console.log('âš ï¸ æ‰§è¡ŒæŒ‡ä»¤ç»“æ„é”™è¯¯: execution =', execution);
        }
      }
    } catch (error) {
      console.error('å¤„ç†MQTTæ¶ˆæ¯å¤±è´¥:', error);
    }
  }

  /**
   * å¯åŠ¨æ¨¡æ‹Ÿ
   */
  start() {
    console.log('ğŸ® å¯åŠ¨æ¨¡æ‹Ÿå™¨...');

    // å‘å¸ƒå¿ƒè·³ (10Hz)
    this.heartbeatTimer = setInterval(() => {
      this.publishHeartbeat();
    }, 100);

    // å‘å¸ƒä½å§¿ (20Hz)
    this.odometryTimer = setInterval(() => {
      this.updatePosition();
      this.publishOdometry();
    }, 50);

    // å‘å¸ƒç‚¹äº‘ (5Hz)
    this.pointCloudTimer = setInterval(() => {
      this.publishPointCloud();
    }, 200);

    console.log('âœ… æ¨¡æ‹Ÿå™¨å·²å¯åŠ¨');
    console.log('ğŸ’¡ æç¤º: ä½¿ç”¨ setTarget(x, y, z) è®¾ç½®ç›®æ ‡ä½ç½®');
  }

  /**
   * åœæ­¢æ¨¡æ‹Ÿ
   */
  stop() {
    console.log('ğŸ›‘ åœæ­¢æ¨¡æ‹Ÿå™¨...');

    if (this.heartbeatTimer) clearInterval(this.heartbeatTimer);
    if (this.odometryTimer) clearInterval(this.odometryTimer);
    if (this.pointCloudTimer) clearInterval(this.pointCloudTimer);

    if (this.mqttClient) {
      this.mqttClient.end();
    }

    console.log('âœ… æ¨¡æ‹Ÿå™¨å·²åœæ­¢');
  }

  /**
   * è®¾ç½®ç›®æ ‡ä½ç½®
   */
  setTarget(x, y, z) {
    this.targetPosition = { x, y, z: z || this.position.z };
    this.isFlying = true;
    console.log(`ğŸ¯ è®¾ç½®ç›®æ ‡: (${x.toFixed(2)}, ${y.toFixed(2)}, ${z?.toFixed(2) || this.position.z.toFixed(2)})`);
  }

  /**
   * æ›´æ–°æ— äººæœºä½ç½®
   */
  updatePosition() {
    if (!this.isFlying || !this.targetPosition) {
      return;
    }

    const dx = this.targetPosition.x - this.position.x;
    const dy = this.targetPosition.y - this.position.y;
    const dz = (this.targetPosition.z || this.position.z) - this.position.z;

    const distance = Math.sqrt(dx*dx + dy*dy + dz*dz);

    // åˆ°è¾¾ç›®æ ‡
    if (distance < 0.1) {
      this.position = { ...this.targetPosition };
      this.velocity = { x: 0, y: 0, z: 0 };
      this.isFlying = false;
      this.targetPosition = null;
      console.log(`âœ… åˆ°è¾¾ç›®æ ‡: (${this.position.x.toFixed(2)}, ${this.position.y.toFixed(2)}, ${this.position.z.toFixed(2)})`);
      return;
    }

    // åŒ€é€Ÿç§»åŠ¨
    const dt = 0.05;  // 50ms
    const stepDistance = this.speed * dt;

    if (stepDistance < distance) {
      const ratio = stepDistance / distance;
      const newX = this.position.x + dx * ratio;
      const newY = this.position.y + dy * ratio;
      const newZ = this.position.z + dz * ratio;

      // ç¢°æ’æ£€æµ‹ï¼šæ£€æŸ¥æ–°ä½ç½®æ˜¯å¦ä¸ç‚¹äº‘ç¢°æ’
      if (this.checkCollision(newX, newY, newZ)) {
        // å¢åŠ è¿ç»­ç¢°æ’è®¡æ•°
        this.consecutiveCollisions++;

        console.log(`âš ï¸ å‰æ–¹éšœç¢ç‰©ï¼Œåœåœ¨å®‰å…¨ä½ç½®: (${this.position.x.toFixed(2)}, ${this.position.y.toFixed(2)}, ${this.position.z.toFixed(2)}) [è¿ç»­ç¢°æ’: ${this.consecutiveCollisions}]`);

        // å¦‚æœè¿ç»­ç¢°æ’3æ¬¡æˆ–ä»¥ä¸Šï¼Œå°è¯•è„±å›°
        if (this.consecutiveCollisions >= 3) {
          console.log(`ğŸ”„ æ£€æµ‹åˆ°è¿ç»­${this.consecutiveCollisions}æ¬¡ç¢°æ’ï¼Œå°è¯•è„±å›°...`);
          this.attemptEscape();
        }

        this.isFlying = false;
        this.targetPosition = null;
        this.velocity = { x: 0, y: 0, z: 0 };
        // ä¸æŠ¥å‘Šç¢°æ’é”™è¯¯ï¼Œè®©æ¢ç´¢å¼•æ“è®¤ä¸ºå·²åˆ°è¾¾å¹¶è§„åˆ’ä¸‹ä¸€ä¸ªç›®æ ‡
        return;
      }

      // ç§»åŠ¨æˆåŠŸï¼Œé‡ç½®ç¢°æ’è®¡æ•°
      this.consecutiveCollisions = 0;

      this.position.x = newX;
      this.position.y = newY;
      this.position.z = newZ;

      this.velocity.x = dx / distance * this.speed;
      this.velocity.y = dy / distance * this.speed;
      this.velocity.z = dz / distance * this.speed;
    } else {
      this.position = { ...this.targetPosition };
      this.velocity = { x: 0, y: 0, z: 0 };
    }
  }

  /**
   * ç¢°æ’æ£€æµ‹ï¼šæ£€æŸ¥ä½ç½®æ˜¯å¦ä¸ç‚¹äº‘ç¢°æ’
   */
  checkCollision(x, y, z) {
    const collisionRadius = 0.3;  // å¢åŠ åˆ°0.3ç±³ï¼ˆæ›´ä¿å®ˆï¼‰

    // åªæ£€æŸ¥ä¸æ— äººæœºåŒé«˜åº¦çš„ç‚¹ï¼ˆÂ±0.3mèŒƒå›´å†…ï¼Œé¿å…åœ°æ¿å¹²æ‰°ï¼‰
    const minZ = z - 0.3;
    const maxZ = z + 0.3;

    // æ£€æŸ¥å‘¨å›´æ˜¯å¦æœ‰ç‚¹äº‘
    for (const point of this.scenePoints) {
      // è·³è¿‡åœ°æ¿ç‚¹ï¼ˆz < 0.2ï¼‰
      if (point.z < 0.2) continue;

      // è·³è¿‡é«˜åº¦å·®å¼‚å¤ªå¤§çš„ç‚¹
      if (point.z < minZ || point.z > maxZ) continue;

      const dx = point.x - x;
      const dy = point.y - y;
      const distance = Math.sqrt(dx*dx + dy*dy);  // åªè®¡ç®—æ°´å¹³è·ç¦»

      if (distance < collisionRadius) {
        return true;  // ç¢°æ’
      }
    }

    return false;  // æ— ç¢°æ’
  }

  /**
   * è„±å›°æœºåˆ¶ï¼šå½“è¿ç»­ç¢°æ’æ—¶ï¼Œå°è¯•ç§»åŠ¨åˆ°æ›´å®‰å…¨çš„ä½ç½®ï¼ˆæ”¯æŒ3D + åŠ¨æ€è·ç¦»ï¼‰
   */
  attemptEscape() {
    // æ ¹æ®è¿ç»­ç¢°æ’æ¬¡æ•°åŠ¨æ€è°ƒæ•´è„±å›°è·ç¦»ï¼ˆè¶Šå›°è¶Šè¿œï¼‰
    const baseDistance = 0.5;
    const escapeDistance = baseDistance * Math.min(Math.floor(this.consecutiveCollisions / 3) + 1, 3);
    // 3æ¬¡ç¢°æ’: 0.5m
    // 6æ¬¡ç¢°æ’: 1.0m
    // 9æ¬¡ç¢°æ’: 1.5m

    console.log(`   å°è¯•è„±å›°è·ç¦»: ${escapeDistance.toFixed(1)}m (è¿ç»­ç¢°æ’${this.consecutiveCollisions}æ¬¡)`);

    // ============ é˜¶æ®µ1: å‚ç›´è„±å›° ============

    // ä½¿ç”¨é…ç½®çš„é«˜åº¦é™åˆ¶ï¼ˆè€Œä¸æ˜¯ç¡¬ç¼–ç ï¼‰
    const MIN_HEIGHT = this.heightLimits.min;
    const MAX_HEIGHT = this.heightLimits.max;

    // 1. å°è¯•ä¸Šå‡
    if (this.position.z + escapeDistance <= MAX_HEIGHT) {  // ä½¿ç”¨é…ç½®çš„æœ€å¤§é«˜åº¦
      const newZ = this.position.z + escapeDistance;
      if (!this.checkCollision(this.position.x, this.position.y, newZ)) {
        this.position.z = newZ;
        console.log(`âœ… è„±å›°æˆåŠŸï¼ˆä¸Šå‡${escapeDistance.toFixed(1)}mï¼‰ï¼Œç§»åŠ¨åˆ°: (${this.position.x.toFixed(2)}, ${this.position.y.toFixed(2)}, ${this.position.z.toFixed(2)}) [é«˜åº¦é™åˆ¶: ${MIN_HEIGHT.toFixed(1)}-${MAX_HEIGHT.toFixed(1)}m]`);
        this.consecutiveCollisions = 0;
        return true;
      }
    }

    // 2. å°è¯•ä¸‹é™
    if (this.position.z - escapeDistance >= MIN_HEIGHT) {  // ä½¿ç”¨é…ç½®çš„æœ€å°é«˜åº¦
      const newZ = this.position.z - escapeDistance;
      if (!this.checkCollision(this.position.x, this.position.y, newZ)) {
        this.position.z = newZ;
        console.log(`âœ… è„±å›°æˆåŠŸï¼ˆä¸‹é™${escapeDistance.toFixed(1)}mï¼‰ï¼Œç§»åŠ¨åˆ°: (${this.position.x.toFixed(2)}, ${this.position.y.toFixed(2)}, ${this.position.z.toFixed(2)}) [é«˜åº¦é™åˆ¶: ${MIN_HEIGHT.toFixed(1)}-${MAX_HEIGHT.toFixed(1)}m]`);
        this.consecutiveCollisions = 0;
        return true;
      }
    }

    // ============ é˜¶æ®µ2: æ°´å¹³è„±å›° ============

    const currentZ = this.position.z;

    // 3. å°è¯•æœå‘ä¸­å¿ƒç§»åŠ¨ï¼ˆ0, 0, å½“å‰é«˜åº¦ï¼‰
    const centerX = 0;
    const centerY = 0;
    const dx = centerX - this.position.x;
    const dy = centerY - this.position.y;
    const dist = Math.sqrt(dx * dx + dy * dy);

    if (dist > 0.1) {  // å¦‚æœä¸åœ¨ä¸­å¿ƒ
      const ratio = Math.min(escapeDistance / dist, 1.0);
      const escapeX = this.position.x + dx * ratio;
      const escapeY = this.position.y + dy * ratio;

      if (!this.checkCollision(escapeX, escapeY, currentZ)) {
        this.position.x = escapeX;
        this.position.y = escapeY;
        console.log(`âœ… è„±å›°æˆåŠŸï¼ˆæœå‘ä¸­å¿ƒ${escapeDistance.toFixed(1)}mï¼‰ï¼Œç§»åŠ¨åˆ°: (${this.position.x.toFixed(2)}, ${this.position.y.toFixed(2)}, ${this.position.z.toFixed(2)})`);
        this.consecutiveCollisions = 0;
        return true;
      }
    }

    // 4. å°è¯•8ä¸ªæ°´å¹³æ–¹å‘
    const angles = [0, 45, 90, 135, 180, 225, 270, 315];
    for (const angle of angles) {
      const rad = angle * Math.PI / 180;
      const escapeX = this.position.x + escapeDistance * Math.cos(rad);
      const escapeY = this.position.y + escapeDistance * Math.sin(rad);

      if (!this.checkCollision(escapeX, escapeY, currentZ)) {
        this.position.x = escapeX;
        this.position.y = escapeY;
        console.log(`âœ… è„±å›°æˆåŠŸï¼ˆæ–¹å‘${angle}Â° ${escapeDistance.toFixed(1)}mï¼‰ï¼Œç§»åŠ¨åˆ°: (${this.position.x.toFixed(2)}, ${this.position.y.toFixed(2)}, ${this.position.z.toFixed(2)})`);
        this.consecutiveCollisions = 0;
        return true;
      }
    }

    // ============ é˜¶æ®µ3: 3Dç»„åˆè„±å›° ============

    // 5. å°è¯•ä¸Šå‡+æ°´å¹³æ–¹å‘
    if (this.position.z + escapeDistance <= MAX_HEIGHT) {  // ä½¿ç”¨ç›¸åŒçš„é«˜åº¦é™åˆ¶
      const newZ = this.position.z + escapeDistance;
      for (const angle of angles) {
        const rad = angle * Math.PI / 180;
        const escapeX = this.position.x + escapeDistance * Math.cos(rad);
        const escapeY = this.position.y + escapeDistance * Math.sin(rad);

        if (!this.checkCollision(escapeX, escapeY, newZ)) {
          this.position.x = escapeX;
          this.position.y = escapeY;
          this.position.z = newZ;
          console.log(`âœ… è„±å›°æˆåŠŸï¼ˆä¸Šå‡+æ–¹å‘${angle}Â° ${escapeDistance.toFixed(1)}mï¼‰ï¼Œç§»åŠ¨åˆ°: (${this.position.x.toFixed(2)}, ${this.position.y.toFixed(2)}, ${this.position.z.toFixed(2)}) [é«˜åº¦é™åˆ¶: ${MIN_HEIGHT.toFixed(1)}-${MAX_HEIGHT.toFixed(1)}m]`);
          this.consecutiveCollisions = 0;
          return true;
        }
      }
    }

    // 6. å°è¯•ä¸‹é™+æ°´å¹³æ–¹å‘
    if (this.position.z - escapeDistance >= MIN_HEIGHT) {  // ä½¿ç”¨ç›¸åŒçš„é«˜åº¦é™åˆ¶
      const newZ = this.position.z - escapeDistance;
      for (const angle of angles) {
        const rad = angle * Math.PI / 180;
        const escapeX = this.position.x + escapeDistance * Math.cos(rad);
        const escapeY = this.position.y + escapeDistance * Math.sin(rad);

        if (!this.checkCollision(escapeX, escapeY, newZ)) {
          this.position.x = escapeX;
          this.position.y = escapeY;
          this.position.z = newZ;
          console.log(`âœ… è„±å›°æˆåŠŸï¼ˆä¸‹é™+æ–¹å‘${angle}Â° ${escapeDistance.toFixed(1)}mï¼‰ï¼Œç§»åŠ¨åˆ°: (${this.position.x.toFixed(2)}, ${this.position.y.toFixed(2)}, ${this.position.z.toFixed(2)}) [é«˜åº¦é™åˆ¶: ${MIN_HEIGHT.toFixed(1)}-${MAX_HEIGHT.toFixed(1)}m]`);
          this.consecutiveCollisions = 0;
          return true;
        }
      }
    }

    // ============ é˜¶æ®µ4: éšæœºè„±å›°ï¼ˆæœ€åæ‰‹æ®µï¼‰============

    // 7. å°è¯•5æ¬¡éšæœºæ–¹å‘+éšæœºè·ç¦»
    for (let attempt = 0; attempt < 5; attempt++) {
      const randomAngle = Math.random() * 360;
      const randomDistance = 1.0 + Math.random() * 1.0;  // 1-2ç±³
      const randomZOffset = (Math.random() - 0.5) * 1.0;  // Â±0.5ç±³

      const escapeX = this.position.x + randomDistance * Math.cos(randomAngle * Math.PI / 180);
      const escapeY = this.position.y + randomDistance * Math.sin(randomAngle * Math.PI / 180);
      const escapeZ = Math.max(MIN_HEIGHT, Math.min(MAX_HEIGHT, this.position.z + randomZOffset));  // ä½¿ç”¨ç›¸åŒçš„é«˜åº¦é™åˆ¶

      if (!this.checkCollision(escapeX, escapeY, escapeZ)) {
        this.position.x = escapeX;
        this.position.y = escapeY;
        this.position.z = escapeZ;
        console.log(`âœ… è„±å›°æˆåŠŸï¼ˆéšæœºæ–¹å‘${randomAngle.toFixed(0)}Â° ${randomDistance.toFixed(1)}mï¼‰ï¼Œç§»åŠ¨åˆ°: (${this.position.x.toFixed(2)}, ${this.position.y.toFixed(2)}, ${this.position.z.toFixed(2)}) [é«˜åº¦é™åˆ¶: ${MIN_HEIGHT.toFixed(1)}-${MAX_HEIGHT.toFixed(1)}m]`);
        this.consecutiveCollisions = 0;
        return true;
      }
    }

    console.log(`âŒ è„±å›°å¤±è´¥ï¼Œæ‰€æœ‰æ–¹å‘ï¼ˆåŒ…æ‹¬3D + éšæœºï¼‰éƒ½æœ‰éšœç¢ç‰©`);
    return false;
  }

  /**
   * è·å–å¯è§ç‚¹äº‘ (ä¼ æ„Ÿå™¨èŒƒå›´å†…çš„ç‚¹)
   */
  getVisiblePoints() {
    const visible = [];

    for (const point of this.scenePoints) {
      const dx = point.x - this.position.x;
      const dy = point.y - this.position.y;
      const dz = point.z - this.position.z;
      const distance = Math.sqrt(dx*dx + dy*dy + dz*dz);

      if (distance <= this.sensorRange) {
        visible.push(point);
      }
    }

    // éšæœºé‡‡æ ·åˆ°ç›®æ ‡å¯†åº¦
    if (visible.length > this.pointCloudDensity) {
      const sampled = [];
      const step = visible.length / this.pointCloudDensity;
      for (let i = 0; i < this.pointCloudDensity; i++) {
        const idx = Math.floor(i * step);
        sampled.push(visible[idx]);
      }
      return sampled;
    }

    return visible;
  }

  /**
   * å‘å¸ƒå¿ƒè·³
   */
  publishHeartbeat() {
    const heartbeat = {
      seqenceId: this.seqId++,
      timestamp: Date.now(),
      status: 'OK'
    };

    // è¿™é‡Œç®€åŒ–ä¸ºJSON,å®é™…åº”è¯¥ç”¨protobufç¼–ç 
    this.mqttClient.publish('/daf/heartbeat', JSON.stringify(heartbeat));
  }

  /**
   * å‘å¸ƒä½å§¿
   */
  publishOdometry() {
    const odometry = {
      pose: {
        position: { ...this.position },
        orientation: { ...this.orientation }
      },
      twist: {
        linear: { ...this.velocity },
        angular: { x: 0, y: 0, z: 0 }
      },
      timestamp: Date.now()
    };

    this.mqttClient.publish('/daf/local/odometry', JSON.stringify(odometry));
  }

  /**
   * å‘å¸ƒç‚¹äº‘
   */
  publishPointCloud() {
    const visiblePoints = this.getVisiblePoints();

    const pointcloud = {
      points: visiblePoints,
      timestamp: Date.now(),
      frame_id: 'lidar'
    };

    this.mqttClient.publish('/daf/pointcloud', JSON.stringify(pointcloud));
  }
}

// å‘½ä»¤è¡Œå¯åŠ¨
if (require.main === module) {
  const args = process.argv.slice(2);
  const sceneFile = args[0] || 'scene.txt';
  const broker = args[1] || 'mqtt://127.0.0.1:1883';

  const simulator = new DroneSimulator(sceneFile, broker);

  (async () => {
    await simulator.loadScene();
    await simulator.connectMQTT();
    simulator.start();

    // ç¤ºä¾‹: 5ç§’åç§»åŠ¨åˆ°(3, 3, 1)
    setTimeout(() => {
      simulator.setTarget(3, 3, 1);
    }, 5000);

    // Ctrl+C ä¼˜é›…é€€å‡º
    process.on('SIGINT', () => {
      console.log('\nğŸ‘‹ é€€å‡ºæ¨¡æ‹Ÿå™¨...');
      simulator.stop();
      process.exit(0);
    });
  })();
}

module.exports = DroneSimulator;
